[package]
name = "server"
version = "0.1.0"
authors = ["Anthony Canino <anthony@anthonycanino.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
tungstenite = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dgraph = "0.4"
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.3"